--- a/index.html
+++ b/index.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hashbank双币质押收益计算器</title>
+    <title>Hashbank收益计算器v1.0</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background: linear-gradient(to right, #141E30, #243B55);
+            color: white;
+        }
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 15px;
+            padding: 20px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+        }
+        .btn-primary {
+            background: #ff9800;
+            border: none;
+        }
+        .btn-primary:hover {
+            background: #e68900;
+        }
+        h2 {
+            font-weight: bold;
+        }
+        .form-control, .form-select {
+            background: rgba(255, 255, 255, 0.2);
+            border: none;
+            color: white;
+        }
+        .form-control:focus, .form-select:focus {
+            background: rgba(255, 255, 255, 0.3);
+        }
+        p span {
+            font-weight: bold;
+            color: #FFD700;
+        }
+    </style>
     <script>
+        async function fetchMbcPrice() {
+            try {
+                let response = await fetch("https://api.dexscreener.com/latest/dex/pairs/bsc/0x2d7c6794ef5a5234b26ba620c659c0913f4b0609");
+                let data = await response.json();
+                let price = parseFloat(data.pairs[0].priceUsd);
+                document.getElementById("mbcPrice").value = price.toFixed(4);
+            } catch (error) {
+                console.error("获取MBC价格失败", error);
+            }
+        }
+
         function calculate() {
             let mbcPrice = parseFloat(document.getElementById("mbcPrice").value);
             let growthFactor = parseFloat(document.getElementById("growthFactor").value);
@@ -37,25 +83,27 @@
             document.getElementById("dailyProfit").innerText = "$" + totalDailyProfit.toFixed(2);
             document.getElementById("actualApy").innerText = actualApy.toFixed(2) + "%";
         }
+        
+        window.onload = fetchMbcPrice;
     </script>
 </head>
-<body class="bg-light">
-    <div class="container mt-5 p-4 bg-white shadow rounded">
-        <h2 class="text-center text-primary">Hashbank双币质押收益计算器</h2>
+<body>
+    <div class="container mt-5 p-4">
+        <h2 class="text-center">Hashbank收益计算器</h2>
         <div class="mb-3">
-            <label class="form-label">当前MBC价U:</label>
-            <input type="number" id="mbcPrice" class="form-control" value="0.02" step="0.005" min="0.01">
+            <label class="form-label">最新MBC价格U:</label>
+            <input type="number" id="mbcPrice" class="form-control" readonly>
         </div>
         <div class="mb-3">
             <label class="form-label">预期涨幅倍数:</label>
-            <input type="number" id="growthFactor" class="form-control" value="1.0" step="0.5" min="0.5">
+            <input type="number" id="growthFactor" class="form-control" value="5.0" step="0.5" min="0.5">
         </div>
         <div class="mb-3">
             <label class="form-label">质押金额U:</label>
             <input type="number" id="stakeAmount" class="form-control" value="10000" step="1000" min="1000">
         </div>
         <div class="mb-3">
-            <label class="form-label">APY金本位(%):</label>
+            <label class="form-label">基础APY(%):</label>
             <select id="apy" class="form-select">
                 <option value="22">22%</option>
                 <option value="30">30%</option>
@@ -67,16 +115,12 @@
         <button class="btn btn-primary w-100" onclick="calculate()">计算</button>
         <div class="mt-4">
             <h4 class="text-center">计算结果</h4>
-            <p class="fs-5">每日综合收益U: <span class="fw-bold text-danger" id="dailyProfit">$0.00</span></p>
-            <p class="fs-5">实际APY: <span class="fw-bold text-danger" id="actualApy">0.00%</span></p>
+            <p>每日综合收益U: <span id="dailyProfit">$0.00</span></p>
+            <p>实际APY: <span id="actualApy">0.00%</span></p>
             <p>预期MBC价U: <span id="expectedMbcPrice">0.02</span></p>
             <p>质押数量MBC: <span id="stakeMbcQty">10000</span></p>
             <p>MBC价值U: <span id="mbcValue">$45</span></p>
             <p>实际质押总额U: <span id="actualStakeTotal">$1022</span></p>
-            <h4 class="text-center">30天收益</h4>
-            <p>30天U收益: <span id="interest30d">$0.00</span></p>
-            <p>30天MBC收益U: <span id="profit30dMbc">$0.00</span></p>
-            <p>30天综合收益U: <span id="totalProfit30d">$0.00</span></p>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
