--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 let mbcPriceInput = document.getElementById("mbcPrice");
                 if (mbcPriceInput) {
                     mbcPriceInput.value = price.toFixed(4);
-                    alert("MBC 价格获取成功: $" + price.toFixed(4));
+                    //alert("MBC 价格获取成功: $" + price.toFixed(4));
                 }
             } catch (error) {
                 alert("获取MBC价格失败，请手动输入。");
