--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                 let mbcPriceInput = document.getElementById("mbcPrice");
                 if (mbcPriceInput) {
                     mbcPriceInput.value = price.toFixed(4);
-                    //alert("MBC 价格获取成功: $" + price.toFixed(4));
                 }
             } catch (error) {
                 alert("获取MBC价格失败，请手动输入。");
@@ -73,7 +72,7 @@
             }
 
             let expectedMbcPrice = mbcPrice * growthFactor;
-            let actualStakedTotal = stakeAmount + stakeAmount*mbcPrice; // 实际质押总额U计算
+            let actualStakedTotal = stakeAmount + stakeAmount * mbcPrice;
             let dailyInterest = (stakeAmount * apy) / 360;
             let dailyProfitMbc = ((expectedMbcPrice - mbcPrice) * stakeAmount) / 30;
             let totalDailyProfit = dailyInterest + dailyProfitMbc;
@@ -98,7 +97,24 @@
         </div>
         <div class="mb-3">
             <label class="form-label">预期涨幅倍数:</label>
-            <input type="number" id="growthFactor" class="form-control" value="5.0" step="0.5" min="0.5">
+            <select id="growthFactor" class="form-select">
+                <option value="0.5">0.5</option>
+                <option value="1">1</option>
+                <option value="1.5">1.5</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5" selected>5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="20">20</option>
+                <option value="30">30</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+            </select>
         </div>
         <div class="mb-3">
             <label class="form-label">质押金额U:</label>
@@ -120,7 +136,7 @@
             <p>实际APY: <span id="actualApy">0.00%</span></p>
             <p>每日综合收益U: <span id="dailyProfit">$0.00</span></p>
             <p>年综合收益U: <span id="annualProfit">$0.00</span></p>
-          <br>
+            <br>
             <p>实际质押总额U: <span id="actualStakedTotal">$0.00</span></p>
             <p>预期MBC价U: <span id="expectedMbcPrice">$0.0000</span></p>
         </div>
