--- a/trade_analyze.html
+++ b/trade_analyze.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>币种交易分析器</title>
+    <title>trade analyze</title>
     <style>
         #txList {
             max-height: 300px;
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <h1>币种交易分析器</h1>
+    <h1>币种交易分析器v1.0</h1>
     <button onclick="connectWallet()">连接 OKX Web3 钱包</button>
     <br><br>
 
