--- a/clubcal.html
+++ b/clubcal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hashclub代理收益模拟器</title>
+  <title>Hashclub代理</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- 引入 Bootstrap 的 JavaScript 文件 -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -67,7 +67,7 @@
 </head>
 <body>
 <div class="container">
-  <h2 class="mb-4">💰Hashclub代理收益模拟器v1.2 KID</h2>
+  <h2 class="mb-4">💰Hashclub代理收益模拟器v1.2</h2>
 <!-- ... 已有代码 ... -->
   <form id="earningsForm" class="row g-3 card p-4">
     <div class="col-md-4">
