--- a/clubcal.html
+++ b/clubcal.html
@@ -120,7 +120,7 @@
     <!-- 添加折叠框按钮 -->
     <div class="col-12">
       <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#advancedOptions" aria-expanded="false" aria-controls="advancedOptions">
-        高级选项
+        高级选项+
       </button>
     </div>
     <!-- 折叠框内容 -->
